enable preview in application plugin